styles.css edit1

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,7 +1,7 @@
 Aah I was too lazy to implement this
 You can do it
 nav {
-  background-color: #007BFF; 
+  background-color: blue; 
   padding: 10px;
   margin: 10px;
   border-radius: 5px;
